# rover

./: .bazelrc  .gitignore  Cargo.toml  LICENSE.md  MODULE.bazel  WORKSPACE.bazel  go.mod  go.sum
.github/workflows/: pr.yaml
agent/: BUILD.bazel  Cargo.toml  config.go  driver.go  main.go
agent/dns/: BUILD.bazel  handler.go  server.go
agent/handlers/: BUILD.bazel  info.go
agent/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
drivers/: BUILD.bazel  driver.go
drivers/exec/: BUILD.bazel  config.go  handler.go  main.go
drivers/jre/: BUILD.bazel  config.go  handler.go
drivers/oci/: BUILD.bazel  handler.go  main.go
drivers/schemas/: BUILD.bazel  driver.proto
rules/: go.bzl  junit5.bzl
utils/: BUILD.bazel  parse.go
