module(name = "rover")

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_proto", version = "6.0.0-rc3")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_pbnjay_memory",
    "com_github_prometheus_client_golang",
    "com_github_uptrace_bunrouter",
    "org_golang_google_grpc",
    "org_uber_go_zap",
)
