[package]
name = "cli"
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
reqwest = "0.11.24"
agent = {path = "../agent"}
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[[bin]]
name = "rover"
path = "src/main.rs"